--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,16 @@
   /* border: 1px solid red; */
 }
 h1 {
-  font-size: 55px;
-  line-height: 75px;
+  font-size: 4vw;
+  line-height: 4vw;
 }
 h2 {
   font-family: 'Petit Formal Script', cursive;
-  font-size: 18px;
+  font-size: 1.25vw;
 }
 h3 {
   font-family: 'Petit Formal Script', cursive;
-  font-size: 40px;
+  font-size: 2.75vw;
 }
 ul {
   list-style-type: none;
@@ -41,12 +41,12 @@ a:active {
 }
 .navbar-brand > img {
   max-width: 25vw;
-  margin: 25px 0 0 50px;
+  margin: 1vw 0 0 2vw;
 }
 .navbar-nav li {
   text-transform: uppercase;
-  margin: 25px 60px 0 60px;
-  font-size: 18px;
+  margin: 1vw 3vw 0 3vw;
+  font-size: 1.25vw;
 }
 .navbar-light .navbar-nav .nav-link {
   color: #626262;
@@ -58,12 +58,12 @@ a:active {
   color: #626262;
 }
 .jumbotron-div {
-  margin-top: -40px;
+  margin-top: -2.25vw;
   z-index: -10;
   position: relative;
 }
 .ourStory {
-  padding: 100px 0;
+  padding: 6vw 0;
 }
 .ourStory h1,
 .ourStory h2 {
@@ -71,6 +71,7 @@ a:active {
 }
 .ourStory p {
   text-align: center;
+  padding: 0 3vw;
 }
 .ourStory p:last-child {
   padding-bottom: 50px;
@@ -80,14 +81,13 @@ a:active {
   margin: 50px 0 35px 0;
   background: url('../img/Tina+Anthony-32.png') no-repeat bottom center;
   background-size: contain;
-  /* background-image: url('../img/Tina+Anthony-32.png'); */
-  height: 1080px;
+  height: 75vw;
 }
 .contactSection p {
-  font-size: 35px;
+  font-size: 2vw;
 }
 .btn-cu {
-  padding: 15px 50px;
+  padding: 1vw 2vw;
 }
 footer p {
   font-size: 15px;
@@ -100,4 +100,41 @@ footer p {
 }
 .pinkLink:active {
   color: #d4b3ac;
+}
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px)
+{
+  h1 {
+    font-size: 8vw;
+    line-height: 8vw;
+  }
+  h2 {
+    font-family: 'Petit Formal Script', cursive;
+    font-size: 2.75vw;
+  }
+  h3 {
+    font-family: 'Petit Formal Script', cursive;
+    font-size: 5vw;
+  }
+  .navbar-brand > img {
+    max-width: 50vw;
+    margin: 0;
+  }
+  .jumbotron-div {
+    margin-top: 0px;
+    z-index: -10;
+    position: relative;
+  }
+  .ourStory h1,
+  .ourStory h2 {
+    padding-left: 0;
+    text-align: center;
+  }
+  .collections img {
+    max-height: 50vw;
+  }
+  .collections h1,
+  .collections h2 {
+    text-align: center;
+  }
 }
